GS-13761 - Parse java version generically to support future releases